--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <nav class="navbar navbar-expand-lg px-4">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">
-                <img src="img/logo-web.svg" alt="">
+                <img src="./img/logo-web.svg" alt="">
               </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -87,7 +87,7 @@
 <div class="container-fluid mt-5">
   <div class="container px-5">
     <a href="#">
-      <img src="/img/14gun.webp" alt="" class="hero-image">
+      <img src="./img/14gun.webp" alt="" class="hero-image">
     </a>
     
   </div>
@@ -99,7 +99,7 @@
     <div class="row">
       <div class="col-lg-3 col-md-6">
         <div class="card text-center bg-black text-white">
-          <img src="/img/card1.webp" class="card-img-top" alt="...">
+          <img src="./img/card1.webp" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Survivor Tv'de Yok</h5>            
           </div>
@@ -107,7 +107,7 @@
       </div>
       <div class="col-lg-3 col-md-6">
         <div class="card text-center bg-black text-white">
-          <img src="/img/card2.webp" class="card-img-top" alt="...">
+          <img src="./img/card2.webp" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Şampiyonlar Ligi</h5>            
           </div>
@@ -115,7 +115,7 @@
       </div>
       <div class="col-lg-3 col-md-6">
         <div class="card text-center bg-black text-white">
-          <img src="/img/card3.webp" class="card-img-top" alt="...">
+          <img src="./img/card3.webp" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Avrupa Ligi</h5>            
           </div>
@@ -123,7 +123,7 @@
       </div>
       <div class="col-lg-3 col-md-6">
         <div class="card text-center bg-black text-white">
-          <img src="/img/card4.webp" class="card-img-top" alt="...">
+          <img src="./img/card4.webp" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Konferans Ligi</h5>            
           </div>
@@ -131,7 +131,7 @@
       </div>
       <div class="col-lg-3 col-md-6">
         <div class="card text-center bg-black text-white">
-          <img src="/img/card5.webp" class="card-img-top" alt="...">
+          <img src="./img/card5.webp" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Aşk Kumardır</h5>            
           </div>
@@ -139,7 +139,7 @@
       </div>
       <div class="col-lg-3 col-md-6">
         <div class="card text-center bg-black text-white">
-          <img src="/img/card6.webp" class="card-img-top" alt="...">
+          <img src="./img/card6.webp" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Leyle ile Mecnun</h5>            
           </div>
@@ -147,7 +147,7 @@
       </div>
       <div class="col-lg-3 col-md-6">
         <div class="card text-center bg-black text-white">
-          <img src="/img/card7.webp" class="card-img-top" alt="...">
+          <img src="./img/card7.webp" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Gibi</h5>            
           </div>
@@ -156,7 +156,7 @@
       
       <div class="col-lg-3 col-md-6">
         <div class="card text-center bg-black text-white">
-          <img src="/img/card8.webp" class="card-img-top" alt="...">
+          <img src="./img/card8.webp" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Arabeskin Aşık Kadınları</h5>            
           </div>
