--- a/index.html
+++ b/index.html
@@ -168,23 +168,23 @@
 
 <!-- ! Ekranlar -->
 <div class="container text-center mt-5 pb-5">
-  <img class="ekranlar" src="/img/ekranlar.svg" alt="" >
+  <img class="ekranlar" src="./img/ekranlar.svg" alt="" >
   <h2 class="text-white w-75 m-auto mt-4">Hemen üye ol, cepte, tablette, bilgisayarda, istediğin zaman, istediğin yerde exxen.com, Google Play, AppGallery, App Store, Apple TV ve Android TV'den izlemeye başla.</h2>
   <div class="mobile mt-4">
     <ul>
       <li>
         <a href="#">
-          <img class="device" src="img/app-store-2.svg" alt="">
+          <img class="device" src="./img/app-store-2.svg" alt="">
         </a>
       </li>
       <li>
         <a href="#">
-          <img class="device" src="img/google-play@3x.png" alt="">
+          <img class="device" src="./img/google-play@3x.png" alt="">
         </a>
       </li>
       <li>
         <a href="#">
-          <img class="device" src="img/huawei-app-gallery@3x.png" alt="">
+          <img class="device" src="./img/huawei-app-gallery@3x.png" alt="">
         </a>
       </li>
     </ul>
